work on base for react and tsx

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -67,8 +67,11 @@
 
   <div class="container-fluid">
 
-    <h1 v-cloak><span class="fa fa-bookmark"></span> {{ message }}</h1>
-    <componentexample></componentexample>
+    <div class="row">
+      <div class="col-xs-12">
+        <div id="example"></div>
+      </div>
+    </div>
 
   </div>
 
