--- a/src/html/index.html
+++ b/src/html/index.html
@@ -68,7 +68,7 @@
   <div class="container-fluid">
 
     <div class="row">
-      <div class="col-xs-12">
+      <div class="col-xs-6 col-xs-offset-3">
         <div id="example"></div>
       </div>
     </div>
